feat: finished basic api documentation
